More command refactoring work